implementar etiquetas de texto

--- a/html/autos.html
+++ b/html/autos.html
@@ -31,8 +31,8 @@
     </header>
     <section>
         <article style="color: white;">
-            <h3 style="text-align: center;">Autos de lujo</h3>
-            <p>Hay vehículos exclusivos en el modo individual que no hacen aparición en GTA Online y viceversa. Como también se han añadido una gran cantidad de deportivos como el Jester y superdeportivos como el Zentorno. Hasta la Actualización Dinero Sucio Parte 2 los siguientes vehículos que serán lanzados ya no estarán disponibles en modo campaña.
+            <h2 style="text-align: center;">Autos de lujo</h2>
+            <h1>Hay vehículos exclusivos en el modo individual que no hacen aparición en GTA Online y viceversa. Como también se han añadido una gran cantidad de deportivos como el Jester y superdeportivos como el Zentorno. Hasta la Actualización Dinero Sucio Parte 2 los siguientes vehículos que serán lanzados ya no estarán disponibles en modo campaña.</h1>
         </article>
     </section>
     <br>
@@ -50,15 +50,15 @@
     </section>
     <section style="background-color:bisque;">
         <article>
-            <h3>Algunas marcas reconocidas dentro del juego</h3>
+            <h3><strong>Algunas marcas reconocidas dentro del juego</strong></h3>
             <h3>Lampadati</h3>
-            <h1>«Una empresa italiana de coches de lujo fundada en Polonia a principios del siglo XX y que se dedicó a los coches de carreras. Tras no conseguir ganar muchos grandes premios, se centraron en fabricar coches deportivos que impresionan a las mujeres casquivanas. Esto si que lo han conseguido. Y muy bien por cierto.»</h1>
+            <h1><q>Una empresa italiana de coches de lujo fundada en Polonia a principios del siglo XX y que se dedicó a los coches de carreras. Tras no conseguir ganar muchos grandes premios, se centraron en fabricar coches deportivos que impresionan a las mujeres casquivanas. Esto si que lo han conseguido. Y muy bien por cierto.</q></h1>
             <br>
             <h3>Windsor</h3>
-            <h1>«Al desdibujar los límites entre un automóvil y una mansión de un aristócrata inglés, este coche podría darle un aura de clase y buen gusto hasta a un fan del nu metal. El inútil fabricante creó una aerodinámica tan patética y un chasis tan pesado que este motor de doble turbo apenas da para manejar despacio mientras eliges a una prostituta, pero eso es parte de (o todo) su encanto británico.»</h1>
+            <h1><q>Al desdibujar los límites entre un automóvil y una mansión de un aristócrata inglés, este coche podría darle un aura de clase y buen gusto hasta a un fan del nu metal. El inútil fabricante creó una aerodinámica tan patética y un chasis tan pesado que este motor de doble turbo apenas da para manejar despacio mientras eliges a una prostituta, pero eso es parte de (o todo) su encanto británico.</q></h1>
             <br>
             <h3>Zion Cabrio</h3>
-            <h1>«Ingeniería y diseño alemanes tomados muy, muy en serio. Se garantiza que este modelo de Zion descapotable le levantará el peluquín a cualquier ejecutivo sénior.»</h1>
+            <h1><q>Ingeniería y diseño alemanes tomados muy, muy en serio. Se garantiza que este modelo de Zion descapotable le levantará el peluquín a cualquier ejecutivo sénior.</q></h1>
             <br>
         </article>
     </section>
