--- a/html/videosDeLaComunidad.html
+++ b/html/videosDeLaComunidad.html
@@ -32,7 +32,7 @@
     <section>
         <article id>
             <h2 style="color: chocolate;">Videos de la comunidad</h2>
-            <h1 style="color: white;">Estos videos son realizados por la comunidad de GTA online para demostrar el como se convive dentro del videojuego</h1>
+            <h1 style="color: white;">Estos videos son realizados por la comunidad de <mark>GTA online</mark> para demostrar el como se convive dentro del videojuego</h1>
         </article>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/K8mR9H804-0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
         <iframe width="560" height="315" src="https://www.youtube.com/embed/2vW58ewyP2k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -44,7 +44,7 @@
     <section>
         <article>
             <h2 style="color: chocolate;">Cinematicas del GTA</h2>
-            <h1 style="color: white;">En esta seccion podras disfrutar de tus cinematicas favoritas</h1>
+            <h1 style="color: white;">En esta seccion podras disfrutar de tus <mark>cinematicas</mark> favoritas</h1>
         </article>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/LqDAPKDDpJA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Ge4TzpmGDXo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
