poner imagenes en los article

--- a/html/negocios.html
+++ b/html/negocios.html
@@ -33,14 +33,12 @@
     <audio controls autoplay loop id="header-video">
         <source src="../audios/musica-para-motociclistas-9.mp3" type="audio/mpeg">
     </audio>
-    <section>
+    <section style="color: white;">
         <h2 style="color: darkturquoise;">Gráficos y guía de ganancias empresariales de BTA Online Bikers</h2>
-        <article style="color: white;">
-            <h3>Si bien las empresas introducidas en el DLC de Bikers de <u>GTA Online</u>  no son las empresas más rentables en el juego y vienen con el desafortunado efecto secundario de recibir llamadas telefónicas constantes de LJT quejándose sobre su ética de trabajo, son una excelente manera de obtener un poco de esfuerzo efectivo mientras trabaja en trabajos más eficientes. Echa un vistazo a nuestra guía completa de GTA Online para ganar dinero sobre dónde encajan las empresas Bikers en el esquema de las cosas.</h3>
-            <h3>Sin embargo, maximizar las ganancias de las empresas es clave para que sean una búsqueda que valga la pena, y hay muchos datos que el juego no te dice por adelantado. Es posible que su forma de administrar sus negocios necesite mucha racionalización y optimización, pero ni siquiera lo sabe y, como resultado, las ganancias podrían mejorar significativamente.</h3>
-            <h3>Un gráfico útil elaborado por el usuario de Reddit <u>Echobox419</u> ha reiterado que el bloqueo de cocaína es el negocio más rentable, sin embargo, también se han revelado algunas complejidades adicionales de la mecánica comercial. Al igual que en el caso de nuestra Guía de durabilidad del vehículo, algunos de los sistemas subyacentes aquí no son aparentes para el jugador.</h3>
-            <h3>Las fracciones se suman a un número entero en 5 barras en cada caso, sin embargo, en el medio siempre se crea un exceso de producto, y ese exceso se desperdicia cada vez que cierra un negocio. Tenga en cuenta que estos números provienen de empresas con atributos de Equipo y Personal totalmente actualizados, por lo que las empresas no actualizadas pueden arrojar resultados variados.</h3>
-        </article>
+        <h3>Si bien las empresas introducidas en el DLC de Bikers de <u>GTA Online</u>  no son las empresas más rentables en el juego y vienen con el desafortunado efecto secundario de recibir llamadas telefónicas constantes de LJT quejándose sobre su ética de trabajo, son una excelente manera de obtener un poco de esfuerzo efectivo mientras trabaja en trabajos más eficientes. Echa un vistazo a nuestra guía completa de GTA Online para ganar dinero sobre dónde encajan las empresas Bikers en el esquema de las cosas.</h3>
+        <h3>Sin embargo, maximizar las ganancias de las empresas es clave para que sean una búsqueda que valga la pena, y hay muchos datos que el juego no te dice por adelantado. Es posible que su forma de administrar sus negocios necesite mucha racionalización y optimización, pero ni siquiera lo sabe y, como resultado, las ganancias podrían mejorar significativamente.</h3>
+        <h3>Un gráfico útil elaborado por el usuario de Reddit <u>Echobox419</u> ha reiterado que el bloqueo de cocaína es el negocio más rentable, sin embargo, también se han revelado algunas complejidades adicionales de la mecánica comercial. Al igual que en el caso de nuestra Guía de durabilidad del vehículo, algunos de los sistemas subyacentes aquí no son aparentes para el jugador.</h3>
+        <h3>Las fracciones se suman a un número entero en 5 barras en cada caso, sin embargo, en el medio siempre se crea un exceso de producto, y ese exceso se desperdicia cada vez que cierra un negocio. Tenga en cuenta que estos números provienen de empresas con atributos de Equipo y Personal totalmente actualizados, por lo que las empresas no actualizadas pueden arrojar resultados variados.</h3>
     </section>
     <br>
     <section>
