Finalmente, se pide que una de las páginas tenga al menos cuatro secciones (<section>) con tres artículos (<article>) cada sección. Luego, cada sección debe tener un encabezado (<header>), en donde, se ubicaran enlaces que permitan navegar entre los artículos usando id’s (ver, página 63 del texto guía).

--- a/html/actividades.html
+++ b/html/actividades.html
@@ -31,8 +31,8 @@
     </header>
     <br>
     <section>
-        <h2 style="text-align: center;">ACTIVIDADES</h2>
-        <h1>Los Santos y el condado de Blaine ofrecen numerosas oportunidades a los criminales más ambiciosos. Acepta misiones y una amplia gama de actividades en solitario, junto a tu Crew o en colaboración con colegas mercenarios y degenerados. Realiza todo tipo de atracos y actividades ilícitas, como por ejemplo:</h1>
+        <h2 style="text-align: center;color: white;">ACTIVIDADES</h2>
+        <h1 style="color: white;">Los Santos y el condado de Blaine ofrecen numerosas oportunidades a los criminales más ambiciosos. Acepta misiones y una amplia gama de actividades en solitario, junto a tu Crew o en colaboración con colegas mercenarios y degenerados. Realiza todo tipo de atracos y actividades ilícitas, como por ejemplo:</h1>
         <article style="color: white;">
             <img src="../imagenes/carrera.png" alt="">
             <aside>
