--- a/html/negocios.html
+++ b/html/negocios.html
@@ -30,42 +30,113 @@
          </nav>
     </header>
     <br>
-    <audio controls autoplay loop id="header-video">
+    <!--<audio controls autoplay loop id="header-video">
         <source src="../audios/musica-para-motociclistas-9.mp3" type="audio/mpeg">
-    </audio>
+    </audio>-->
     <section style="color: white;">
+      <header>
+        <nav>
+          <ul style="color: white;">
+              <li><a href="#inicio" style="color: coral;">Introduccion</a></li>
+              <li><a href="#jefe" style="color: coral;">SÉ TU PROPIO JEFE</a></li>
+              <li><a href="#ejecutiva" style="color: coral;">LA SUITE EJECUTIVA</a></li>
+          </ul>
+        </nav>
+      </header>
+      <article id="inicio">
         <h2 style="color: darkturquoise;">Gráficos y guía de ganancias empresariales de BTA Online Bikers</h2>
+        <img src="../imagenes/negocios.jpg" alt="">
         <h3>Si bien las empresas introducidas en el DLC de Bikers de <u>GTA Online</u>  no son las empresas más rentables en el juego y vienen con el desafortunado efecto secundario de recibir llamadas telefónicas constantes de LJT quejándose sobre su ética de trabajo, son una excelente manera de obtener un poco de esfuerzo efectivo mientras trabaja en trabajos más eficientes. Echa un vistazo a nuestra guía completa de GTA Online para ganar dinero sobre dónde encajan las empresas Bikers en el esquema de las cosas.</h3>
         <h3>Sin embargo, maximizar las ganancias de las empresas es clave para que sean una búsqueda que valga la pena, y hay muchos datos que el juego no te dice por adelantado. Es posible que su forma de administrar sus negocios necesite mucha racionalización y optimización, pero ni siquiera lo sabe y, como resultado, las ganancias podrían mejorar significativamente.</h3>
         <h3>Un gráfico útil elaborado por el usuario de Reddit <u>Echobox419</u> ha reiterado que el bloqueo de cocaína es el negocio más rentable, sin embargo, también se han revelado algunas complejidades adicionales de la mecánica comercial. Al igual que en el caso de nuestra Guía de durabilidad del vehículo, algunos de los sistemas subyacentes aquí no son aparentes para el jugador.</h3>
         <h3>Las fracciones se suman a un número entero en 5 barras en cada caso, sin embargo, en el medio siempre se crea un exceso de producto, y ese exceso se desperdicia cada vez que cierra un negocio. Tenga en cuenta que estos números provienen de empresas con atributos de Equipo y Personal totalmente actualizados, por lo que las empresas no actualizadas pueden arrojar resultados variados.</h3>
+      </article>
+      <article id="jefe">
+        <h2 style="color: darkturquoise;">SÉ TU PROPIO JEFE</h2>
+        <img src="../imagenes/seTuPropioJefe.png">
+        <h3>Los jugadores pueden convertirse en vip a través de la opción SecuroServ, en el menú Interacción del jugador, para poder crear su propia organización y ponerle nombre, además de contratar a un máximo de 3 jugadores para que trabajen como escoltas. Los vips pueden recaudar todo el dinero conseguido por la organización y los escoltas, acceder a habilidades especiales, realizar trabajos y desafíos vip, dar munición y blindaje, pedir vehículos nuevos a la carta, y mucho más.</h3>
+      </article>
+      <article id="ejecutiva">
+        <h2 style="color: darkturquoise;">LA SUITE EJECUTIVA</h2>
+        <img src="../imagenes/ejecutiva.png">
+        <h3>Antes de nadar en una piscina de billetes, tendrás que ocuparte de los aspectos básicos. Lo primero es comprar una oficina, lo cual te conferirá la función de jefe (amén de todos los beneficios de ser vip) y funcionará a modo de centro de operaciones para tus chanchullos. Personaliza tu oficina con las opciones de decoración disponibles y ponle nombre a tu organización. También podrás elegir otros servicios: una caja fuerte para que veas cómo rebosa de dinero, un área de descanso o un armero para poder personalizar tu arsenal.</h3>
+      </article>
+    </section>
+    <br>
+    <section style="color: white;">
+      <header>
+        <nav>
+          <ul style="color: white;">
+            <li><a href="#amigos" style="color: coral;">Jugando con amigos</a></li>
+            <li><a href="#mercanciaEsp" style="color: coral;">VENDER MERCANCÍA ESPECIAL</a></li>
+            <li><a href="#investigacion" style="color: coral;">INVESTIGACIÓN Y PRODUCCIÓN</a></li>
+          </ul>
+        </nav>
+      </header>
+      <article style="color: white;" id="amigos">
+        <h2 style="color: darkturquoise;">Jugando con amigos</h2>
+        <img src="../imagenes/amigos.jpg">
+        <h3>Las cosas cambian significativamente cuando se juega con amigos. Dado que comprar suministros solo le permitirá llenar parcialmente sus barras, una buena técnica aquí es comprar tanto como pueda y luego robar el resto para obtener el máximo rendimiento. Luego, salga y realice otras actividades (las misiones de Importar / Exportar también son más rentables y más rápidas cuando se hacen en grupo) mientras los productos se cocinan, y luego vende todo de una vez por un gran pago.</h3>
+      </article>
+      <article id="mercanciaEsp">
+        <h2 style="color: darkturquoise;">VENDER MERCANCÍA ESPECIAL</h2>
+        <img src="../imagenes/mercanciaEsp.png" alt="">
+        <h3>Las misiones de venta son la oportunidad ideal para que el jefe saque tajada de los suministros que ha adquirido con el sudor de su frente, aunque en este caso también es importante tener en cuenta el factor riesgo-recompensa. Vender grandes cantidades llamará la atención de compradores más acaudalados, pero también supondrá un mayor riesgo. Escoge el momento adecuado para vender la mercancía especial para obtener el máximo beneficio posible. La mercancía más solicitada puede deparar mayores ganancias, pero los almacenes con muchas mercancías no pasarán inadvertidos durante mucho tiempo. Ten cuidado con los ataques que puedan realizar las bandas de Los Santos para agenciarse un pedazo de tu pastel.</h3>
+      </article>
+      <article id="investigacion">
+        <h2 style="color: darkturquoise;">INVESTIGACIÓN Y PRODUCCIÓN</h2>
+        <img src="../imagenes/investigacion.png" alt="">
+        <h3>Además de fabricar los productos que vas a vender, puedes rentabilizar aún más al personal de laboratorio de tu búnker si lo dedicas a la investigación para desbloquear diversas mejoras opcionales, como modificaciones únicas de armas personales, una amplia gama de tecnología brutal para los vehículos armados, y mejoras terroríficas para el Centro de Operaciones Móvil.</h3>
+      </article>
     </section>
     <br>
     <section>
-        <article style="color: white;">
-            <h2 style="color: darkturquoise;">Jugando con amigos</h2>
-            <img src="../imagenes/amigos.jpg">
-            <h3>Las cosas cambian significativamente cuando se juega con amigos. Dado que comprar suministros solo le permitirá llenar parcialmente sus barras, una buena técnica aquí es comprar tanto como pueda y luego robar el resto para obtener el máximo rendimiento. Luego, salga y realice otras actividades (las misiones de Importar / Exportar también son más rentables y más rápidas cuando se hacen en grupo) mientras los productos se cocinan, y luego vende todo de una vez por un gran pago.</h3>
-        </article>
-    </section>
-    <br>
-    <section>
-        <article style="color: white;"> 
+        <header>
+          <nav style="color: white;">
+            <li><a href="#cocaina" style="color: coral;">La cocaína es el rey</a></li>
+            <li><a href="#ignorar" style="color: coral;">Ignorar falsificación de documentos</a></li>
+            <li><a href="#Mezcla" style="color: coral;">Mezclándolo</a></li>
+          </nav>
+        </header>
+        <article style="color: white;" id="cocaina"> 
             <h2 style="color: darkturquoise;">La cocaína es el rey</h2> 
-            <img src="../imagenes/cocaina.jpg" width="300" height="200">
+            <img src="../imagenes/cocaina.jpg" width="300" height="200" alt="">
             <h3>El cuadro creado por <u>Echobox419</u> hace todos los cálculos para nosotros y muestra que un conjunto completo de productos de cocaína se vende por la mejor cantidad tanto en el caso de suministros robados como comprados, aunque el dinero falsificado con suministros robados supera a la cocaína con los suministros comprados. La ganancia máxima absoluta que puede obtener es de <u>GTA $ 112,000 </u> con inversión cero y <u>GTA $ 93,000</u> con suministros comprados. La cocaína también es el negocio de producción más rápida, con una barra de suministros que se produce en solo 24 minutos, y el lote completo se completa en 2 horas. Las otras empresas tardan alrededor de media hora por un solo lote, y esos minutos adicionales suman a la larga.</h3>
-            <br>
+        </article>
+        <article style="color: white;" id="ignorar">
             <h2 style="color: darkturquoise;">Ignorar falsificación de documentos</h2>
+            <img src="../imagenes/docFalso.jpg" alt="" width="350" height="200">
             <h3>El negocio de falsificación de documentos es, con mucho, el menos rentable, tanto que hacer una venta en la región local con suministros comprados te deja con una pérdida neta en lugar de cualquier tipo de ganancia. Sería prudente ignorar ese tipo de negocio por completo, incluso si decide tomar la ruta de operar múltiples negocios.</h3>
-            <br>
-            <h2 style="color: darkturquoise;">Mezclándolo</h2>
-            <h3>Sobre el tema de múltiples negocios, es una opción que puede parecer más atractiva para los jugadores a los que les disgustan las misiones de <em>Importar / Exportar</em> hasta el punto de no querer jugar en absoluto. En términos generales, las misiones de <em>Importación / Exportación</em> son más riesgosas, ya que requieren que estés en un lobby público abriéndote a PVP. Sin embargo, si te retrasas en tu propio lobby público, el juego aumentará la resistencia de los NPC para hacerte las cosas más difíciles.</h3>
-            <h3>Las misiones de entrega de productos, e incluso las misiones de robo de suministros, son bastante simples por otro lado. Se pueden hacer en vestíbulos privados y el juego no aumenta la dificultad en estos casos, por lo que si está ejecutando solo y encuentra que Importar / Exportar no es su taza de té, administrar múltiples negocios es una excelente manera de hacer algo Buen dinero en efectivo en GTA Online.</h3>
+        </article>
+        <article style="color: white;" id="Mezcla">
+          <h2 style="color: darkturquoise;">Mezclándolo</h2>
+          <h3>Sobre el tema de múltiples negocios, es una opción que puede parecer más atractiva para los jugadores a los que les disgustan las misiones de <em>Importar / Exportar</em> hasta el punto de no querer jugar en absoluto. En términos generales, las misiones de <em>Importación / Exportación</em> son más riesgosas, ya que requieren que estés en un lobby público abriéndote a PVP. Sin embargo, si te retrasas en tu propio lobby público, el juego aumentará la resistencia de los NPC para hacerte las cosas más difíciles.</h3>
+          <h3>Las misiones de entrega de productos, e incluso las misiones de robo de suministros, son bastante simples por otro lado. Se pueden hacer en vestíbulos privados y el juego no aumenta la dificultad en estos casos, por lo que si está ejecutando solo y encuentra que Importar / Exportar no es su taza de té, administrar múltiples negocios es una excelente manera de hacer algo Buen dinero en efectivo en GTA Online.</h3> 
         </article>
     </section>
     <br>
     <section>
-        <h1 style="color: darkturquoise;">Tabla</h1>
+      <header>
+        <nav>
+          <ul style="color: white;">
+            <li><a href="#opMov" style="color: coral;">CENTRO DE OPERACIONES MÓVIL</a></li>
+            <li><a href="#merEsp" style="color: coral;">COMPRAR MERCANCÍA ESPECIAL</a></li>
+            <li><a href="#tabla" style="color: coral;">TABLA</a></li>
+          </ul>
+        </nav>
+      </header>
+      <article id="opMov" style="color: white;">
+        <h2 style="color: darkturquoise;">CENTRO DE OPERACIONES MÓVIL</h2>
+        <img src="../imagenes/opMovil.png" alt="">
+        <h3>Para las operaciones tácticas móviles más complicadas, los traficantes de armas pueden invertir en un Centro de Operaciones Móvil (COM), que es el tipo de apoyo pesado con el que únicamente suelen contar los asesinos bien entrenados o las potencias nucleares renegadas. El diseño modular y móvil del COM permite diversas configuraciones a medida como taller de vehículos, taller de armas, vivienda de lujo y centro de mando, con instalaciones para mejorar y personalizar tu arsenal, y para modificar vehículos armados (incluidas torretas para tu COM que tu equipo pueda controlar). Todo está al alcance de la mano y puedes llevártelo contigo mediante un camión con remolque comercial totalmente personalizable.</h3>
+      </article>
+      <article id="merEsp" style="color: white;">
+        <h2 style="color: darkturquoise;">COMPRAR MERCANCÍA ESPECIAL</h2>
+        <img src="../imagenes/comprarmercanciaEsp.png" alt="">
+        <h3>Solo los jefes pueden acceder a las misiones de mercancía especial. Se trata de misiones peligrosas de varias partes que precisan tener socios muy bien coordinados para superarlas. El tamaño y el objetivo de las misiones de compra varían: desde operaciones policíacas encubiertas a persecuciones a toda velocidad, emboscadas aéreas y mucho más. Planifica tu misión con cuidado y escoge el momento adecuado, ten siempre en mente dónde están tus almacenes, asegúrate de contratar a socios hábiles que puedan controlar bien el tamaño del cargamento, mantén a tus contactos telefónicos y las habilidades de jefe a mano y, sobre todo, ten en cuenta el factor riesgo-recompensa.</h3>
+      </article>
+      <article id="tabla">
+        <h2 style="color: darkturquoise;">Tabla</h2>
         <style type="text/css">
             .tg  {border-collapse:collapse;border-spacing:0;}
             .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
@@ -238,6 +309,7 @@
                 <td class="tg-yqx5">$37k<br>$93k</td>
               </tr>
         </table>
+      </article>
     </section>
     <hr>
     <footer style="color: white;">
