arreglo de errores en la pagina principal

--- a/html/negocios.html
+++ b/html/negocios.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Negocios</title>
 </head>
-<body style="background-image: url(../imagenes/Moteros.jpg);background-size: cover;">
+<body style="background-image: url(../imagenes/fondo.jpg);background-size: cover;">
     <header class="logo">
         <img src="../imagenes/GTA_V_logo.png" width="500" height="500">
          <nav>
                <ul style="color: yellowgreen;">
-                    <li><a href="index.html" style="color: turquoise;">Principal</a></li>
-                    <li><a href="autos.html" style="color: turquoise;">Autos</a></li>
-                    <li><a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a></li>
-                    <li><a href="golpes.html" style="color: turquoise;">Golpes</a> </li>
-                    <li><a href="negocios.html" style="color: turquoise;">Negocios</a> </li>
-                    <li><a href="Noticias.html" style="color: turquoise;">Noticias</a></li>
-                    <li><a href="actividades.html" style="color: turquoise;">Actividades</a> </li>
-                    <li><a href="eventos.html" style="color: turquoise;">Eventos</a></li>
+                    <li><a href="index.html" style="color: coral;">Principal</a></li>
+                    <li><a href="autos.html" style="color: coral;">Autos</a></li>
+                    <li><a href="videosDeLaComunidad.html"style="color: coral;">Videos</a></li>
+                    <li><a href="golpes.html" style="color: coral;">Golpes</a> </li>
+                    <li><a href="negocios.html" style="color: coral;">Negocios</a> </li>
+                    <li><a href="Noticias.html" style="color: coral;">Noticias</a></li>
+                    <li><a href="actividades.html" style="color: coral;">Actividades</a> </li>
+                    <li><a href="eventos.html" style="color: coral;">Eventos</a></li>
                </ul>
                <!--<a href="index.html" style="color: turquoise;">Principal</a>
                <a href="autos.html" style="color: turquoise;">Autos</a></!--<a>
@@ -30,9 +30,9 @@
          </nav>
     </header>
     <br>
-    <!--<audio controls autoplay loop id="header-video">
+    <audio controls autoplay loop id="header-video">
         <source src="../audios/musica-para-motociclistas-9.mp3" type="audio/mpeg">
-    </audio>-->
+    </audio>
     <section style="color: white;">
       <header>
         <nav>
