correccion de errores de la pagina de videos a eccepcion de los que se tienen que corregir con css

--- a/html/videosDeLaComunidad.html
+++ b/html/videosDeLaComunidad.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-image: url(../imagenes/fondo.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/GTA_V_logo.png" width="500" height="500">
+        <img src="../imagenes/GTA_V_logo.png" width="500" height="500" alt="">
          <nav>
                <ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
@@ -30,7 +30,7 @@
          </nav>
     </header>
     <section>
-        <article id>
+        <article>
             <h2 style="color: chocolate;">Videos de la comunidad</h2>
             <h1 style="color: white;">Estos videos son realizados por la comunidad de <mark>GTA online</mark> para demostrar el como se convive dentro del videojuego</h1>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/K8mR9H804-0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
