solucion de errores en la pagina de golpes

--- a/html/golpes.html
+++ b/html/golpes.html
@@ -7,12 +7,12 @@
 </head>
 <body style="background-image: url(../imagenes/golpeDinerito.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/GTA_V_logo.png" width="500" height="500">
+        <img src="../imagenes/GTA_V_logo.png" width="500" height="500" alt="">
          <nav>
                 <ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
                     <li><a href="autos.html" style="color: turquoise;">Autos</a></li>
-                    <li><a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a></li>
+                    <li><a href="videosDeLaComunidad.html" style="color: turquoise;">Videos</a></li>
                     <li><a href="golpes.html" style="color: turquoise;">Golpes</a> </li>
                     <li><a href="negocios.html" style="color: turquoise;">Negocios</a> </li>
                     <li><a href="Noticias.html" style="color: turquoise;">Noticias</a></li>
@@ -39,17 +39,17 @@
             <h1 style="color: bisque">Una experiencia cooperativa para 4 jugadores en Grand Theft Auto Online que ofrece la posibilidad de agruparse para llevar a cabo una serie de intensos golpes en varias fases, con asaltos y atracos por todo Los Santos y el condado de Blaine.</h1>
         </article>
         <article>
-            <img src="../imagenes/planeaEjecuta.jpg">
+            <img src="../imagenes/planeaEjecuta.jpg" alt="">
             <h3 style="color: bisque">PLANEA Y EJECUTA</h3>
             <h1 style="color: bisque">Los golpes en línea abarcan numerosas misiones que introducen nuevos elementos de juego, vehículos, armas y situaciones para poner a prueba las habilidades de los equipos: desde el hackeo de ordenadores, hasta la infiltración, pasando por la precisión en la conducción, la habilidad como piloto, la puntería, el paracaidismo y muchas más cosas.</h1>
         </article>
         <article>
-            <img src="../imagenes/equipos.jpg">
+            <img src="../imagenes/equipos.jpg" alt="">
             <h3 style="color: bisque">EQUIPOS DE 4 JUGADORES, 4 MANERAS DE JUGAR</h3>
             <h1 style="color: bisque;">Elegid vuestros papeles y planead la estrategia para cada fase. La comunicación y la coordinación serán claves. Algunas misiones requerirán que trabajéis unidos, mientras que otras separarán a los miembros para completar objetivos clave. Vuelve a jugar cada golpe desde diferentes perspectivas de la acción y completa los desafíos de élite para conseguir más dinero.</h1>
         </article>
         <article>
-            <img src="../imagenes/reunete.jpg">
+            <img src="../imagenes/reunete.jpg" alt="">
             <h3 style="color: bisque;">REÚNE A TU EQUIPO</h3>
             <h1 style="color: bisque;">Crea una Crew o únete a las que ya hay para ganar recompensas adicionales en RP mientras juegas.</h1>
         </article>
