correccion de errores de la pagina de negocios

--- a/html/negocios.html
+++ b/html/negocios.html
@@ -7,12 +7,12 @@
 </head>
 <body style="background-image: url(../imagenes/fondo.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/GTA_V_logo.png" width="500" height="500">
+        <img src="../imagenes/GTA_V_logo.png" width="500" height="500" alt="">
          <nav>
                <ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: coral;">Principal</a></li>
                     <li><a href="autos.html" style="color: coral;">Autos</a></li>
-                    <li><a href="videosDeLaComunidad.html"style="color: coral;">Videos</a></li>
+                    <li><a href="videosDeLaComunidad.html" style="color: coral;">Videos</a></li>
                     <li><a href="golpes.html" style="color: coral;">Golpes</a> </li>
                     <li><a href="negocios.html" style="color: coral;">Negocios</a> </li>
                     <li><a href="Noticias.html" style="color: coral;">Noticias</a></li>
@@ -53,12 +53,12 @@
       </article>
       <article id="jefe">
         <h2 style="color: darkturquoise;">SÉ TU PROPIO JEFE</h2>
-        <img src="../imagenes/seTuPropioJefe.png">
+        <img src="../imagenes/seTuPropioJefe.png" alt="">
         <h3>Los jugadores pueden convertirse en vip a través de la opción SecuroServ, en el menú Interacción del jugador, para poder crear su propia organización y ponerle nombre, además de contratar a un máximo de 3 jugadores para que trabajen como escoltas. Los vips pueden recaudar todo el dinero conseguido por la organización y los escoltas, acceder a habilidades especiales, realizar trabajos y desafíos vip, dar munición y blindaje, pedir vehículos nuevos a la carta, y mucho más.</h3>
       </article>
       <article id="ejecutiva">
         <h2 style="color: darkturquoise;">LA SUITE EJECUTIVA</h2>
-        <img src="../imagenes/ejecutiva.png">
+        <img src="../imagenes/ejecutiva.png" alt="">
         <h3>Antes de nadar en una piscina de billetes, tendrás que ocuparte de los aspectos básicos. Lo primero es comprar una oficina, lo cual te conferirá la función de jefe (amén de todos los beneficios de ser vip) y funcionará a modo de centro de operaciones para tus chanchullos. Personaliza tu oficina con las opciones de decoración disponibles y ponle nombre a tu organización. También podrás elegir otros servicios: una caja fuerte para que veas cómo rebosa de dinero, un área de descanso o un armero para poder personalizar tu arsenal.</h3>
       </article>
     </section>
@@ -75,7 +75,7 @@
       </header>
       <article style="color: white;" id="amigos">
         <h2 style="color: darkturquoise;">Jugando con amigos</h2>
-        <img src="../imagenes/amigos.jpg">
+        <img src="../imagenes/amigos.jpg" alt="">
         <h3>Las cosas cambian significativamente cuando se juega con amigos. Dado que comprar suministros solo le permitirá llenar parcialmente sus barras, una buena técnica aquí es comprar tanto como pueda y luego robar el resto para obtener el máximo rendimiento. Luego, salga y realice otras actividades (las misiones de Importar / Exportar también son más rentables y más rápidas cuando se hacen en grupo) mientras los productos se cocinan, y luego vende todo de una vez por un gran pago.</h3>
       </article>
       <article id="mercanciaEsp">
@@ -93,9 +93,11 @@
     <section>
         <header>
           <nav style="color: white;">
-            <li><a href="#cocaina" style="color: coral;">La cocaína es el rey</a></li>
-            <li><a href="#ignorar" style="color: coral;">Ignorar falsificación de documentos</a></li>
-            <li><a href="#Mezcla" style="color: coral;">Mezclándolo</a></li>
+            <ul>
+              <li><a href="#cocaina" style="color: coral;">La cocaína es el rey</a></li>
+              <li><a href="#ignorar" style="color: coral;">Ignorar falsificación de documentos</a></li>
+              <li><a href="#Mezcla" style="color: coral;">Mezclándolo</a></li>
+            </ul>
           </nav>
         </header>
         <article style="color: white;" id="cocaina"> 
