--- a/html/eventos.html
+++ b/html/eventos.html
@@ -7,12 +7,12 @@
 </head>
 <body style="background-image: url(../imagenes/fondo.jpg);background-size: cover;">
     <header class="logo">
-        <img src="../imagenes/GTA_V_logo.png" width="500" height="500 ">
+        <img src="../imagenes/GTA_V_logo.png" width="500" height="500" alt="">
          <nav>
                <ul style="color: yellowgreen;">
                     <li><a href="index.html" style="color: turquoise;">Principal</a></li>
                     <li><a href="autos.html" style="color: turquoise;">Autos</a></li>
-                    <li><a href="videosDeLaComunidad.html"style="color: turquoise;">Videos</a></li>
+                    <li><a href="videosDeLaComunidad.html" style="color: turquoise;">Videos</a></li>
                     <li><a href="golpes.html" style="color: turquoise;">Golpes</a> </li>
                     <li><a href="negocios.html" style="color: turquoise;">Negocios</a> </li>
                     <li><a href="Noticias.html" style="color: turquoise;">Noticias</a></li>
